objects/wkcc__LocationWellnessStaging__c.object
<CustomObject>
    <description>This object is a staging table for re-calculating location wellness facts.  Records are removed once the locations have been recalculated.</description>
    <fields>
        <fullName>wkcc__Errors__c</fullName>
        <description>Error messages encountered from batch class failures</description>
        <inlineHelpText>Error messages encountered from batch class failures</inlineHelpText>
        <label>Errors</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>wkcc__ExternalId__c</fullName>
        <description>A unique identifier for the record in the format of &lt;Location Id&gt; + ‘:’ + &lt;Wellness Status&gt;.</description>
        <externalId>true</externalId>
        <inlineHelpText>A unique identifier for the record in the format of &lt;Location Id&gt; + ‘:’ + &lt;Wellness Status&gt;.</inlineHelpText>
        <label>External Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>wkcc__JobStatus__c</fullName>
        <defaultValue>&quot;Not Processed&quot;</defaultValue>
        <description>Indicates the status of this location for processing.</description>
        <inlineHelpText>Indicates the status of this location for processing.</inlineHelpText>
        <label>Job Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Processed</fullName>
                    <default>true</default>
                    <label>Not Processed</label>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>wkcc__Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The location that needs its fact records recalculated.</description>
        <inlineHelpText>The location that needs its fact records recalculated.</inlineHelpText>
        <label>Location</label>
        <referenceTo>Location</referenceTo>
        <relationshipLabel>Location Wellness Staging</relationshipLabel>
        <relationshipName>LocationWellnessStaging</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Location Wellness Staging</label>
    <listViews>
        <fullName>wkcc__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LWS-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Location Wellness Staging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>